--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
+  "name": "student-collab-hub",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
-    "bcrypt": "^6.0.0",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
-    "dotenv": "^17.0.1",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.1",
-    "nodemon": "^3.1.10"
+    "express": "^4.18.2",
+    "mongoose": "^7.6.1"
   }
 }
